...

struct HomeView: View {
    // ADD THIS ONE LINE:
        @Environment(\.appAccentColor) var appAccentColor
    
    private let profiles = [
        ProfileCategory(name: "School", imageName: "SchoolCover", storageKey: "school_data"),
        ProfileCategory(name: "Work", imageName: "WorkCover", storageKey: "work_data"),
        ProfileCategory(name: "Personal", imageName: "PersonalCover", storageKey: "personal_data")
    ]
    
    let columns = [
        GridItem(.flexible()),
...
